<resources>
    <string name="app_name">BigBrain</string>
    <string name="headline">BigBrain</string>
    <string name="solo">Solo</string>
    <string name="online">Multiplayer</string>
    <string name="statistics">Statistics</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>

    <string name="headline_user">User</string>
    <string name="register_link">Not registered yet? Click here</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="save">Save</string>

    <string name="headline_settings">Settings</string>
    <string name="master_volume">Master Volume:</string>
    <string name="right_answer_volume">Right Answer Volume:</string>
    <string name="wrong_answer_volume">Wrong Answer Volume:</string>
    <string name="language">Language:</string>

    <string name="register">Register</string>
    <string name="go_back">Go Back</string>

    <string name="lobby">Lobby</string>
    <string name="join">Join</string>
    <string name="create">Create</string>

    <string name="waiting">Waiting Room</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>

    <string name="ranking">Ranking</string>

    <string name="game_finsih">Game Finished</string>
    <string name="exit_to_menu">Exit to Menu</string>
    <string name="exit_to_lobby">Exit to Lobby</string>

    <string name="create_lobby">Create Lobby</string>
    <string name="lobby_name">Lobby Name:</string>
    <string name="category">Category:</string>
    <string name="create_private">Private Lobby: </string>

    <string name="private_lobby">Private Lobby Name: </string>
</resources>