<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".gui.LoginActivity">

    <TextView
        android:id="@+id/tvHeadline"
        android:layout_width="420dp"
        android:layout_height="65dp"
        android:background="@color/turquoise"
        android:editable="false"
        android:gravity="center"
        android:text="@string/lobby"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btExitAllLobbies"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:layout_marginTop="640dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/exit"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHeadline" />

    <Button
        android:id="@+id/btCreate"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginTop="556dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/create"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btJoinPrivate"
        android:layout_width="145dp"
        android:layout_height="59dp"
        android:layout_marginTop="556dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/join"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/svSearchbar"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@color/white"
        android:scrollbarSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLobbies"
        android:layout_width="327dp"
        android:layout_height="367dp"
        android:layout_marginTop="160dp"
        android:background="@color/white"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>