<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".gui.GameFinishActivity">

    <TextView
        android:id="@+id/tvHeadline"
        android:layout_width="420dp"
        android:layout_height="65dp"
        android:background="@color/turquoise"
        android:editable="false"
        android:gravity="center"
        android:text="@string/game_finsih"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btExitToLobby"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/exit_to_lobby"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <Button
        android:id="@+id/btExitToMenu"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/exit_to_menu"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGameFinishRank"
        android:layout_width="327dp"
        android:layout_height="367dp"
        android:layout_marginTop="160dp"
        android:background="@color/white"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>